--- a/templates/admin/product/create.html.twig
+++ b/templates/admin/product/create.html.twig
@@ -31,7 +31,7 @@
                 </select>
 
                 <div id="linked-form-container">
-                    <!-- Les formulaires dynamiques s'afficheront ici -->
+                    <!-- Formulaire lié chargé dynamiquement -->
                 </div>
             </div>
         </div>
@@ -40,5 +40,4 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('assets/js/app.js') }}"></script>
 {% endblock %}
