--- a/templates/user/dashboard.html.twig
+++ b/templates/user/dashboard.html.twig
@@ -17,6 +17,9 @@
             <div class="col-12 col-md-4 mb-4">
                 <a href="{{ path('user_add_stock') }}" class="btn btn-lg btn-success w-100 py-4">Ajouter du stock</a>
             </div>
+            <div class="col-12 col-md-4 mb-4">
+                <a href="{{ path('user_return_product') }}" class="btn btn-lg btn-danger w-100 py-4">Retour produit</a>
+            </div>
         </div>
 
         <div class="text-center mt-4">
